--- a/take/index.html
+++ b/take/index.html
@@ -70,7 +70,7 @@
 					<div class="articlesFind"><a href="">Find Out more →</a></div>
 				</article>
 				<article id="hair">
-					<h3>Start somthing ne</h3>
+					<h3>Start something ne</h3>
 					<p>Lorem ipsum dolor sit amet, consecteque, ut, sapiente officiis sint</p>
 					<div class="articlesFind"><a href="">Find Out more →</a></div>
 					
