пример верстки с .psd макета

--- a/take/index.html
+++ b/take/index.html
@@ -184,7 +184,7 @@
 			<section class="left">
 				<div class="inTouch">
 					<h6>Get in touch</h6>
-					<p>Lorem ipsum dolor sit a, nisi debitis obcaecati hic illum, veniam cupiditate.</p>
+					<p>Lorem ipsum dolor sit a, nisi debitis robcaecati hic illum, veniam cupiditate.</p>
 				</div>
 				<div class="col">
 					<h6>Resources</h6>
@@ -192,7 +192,7 @@
 				</div>
 				<div class="col">
 					<h6>Features</h6>
-					<p>Lorem ipsum dolor sitsequi dolor aLorem ipsum dolor sitsequi dolor architecto accusamus quisquam.</p>
+					<p>Lorem ipsum dolor sitsequi dolor aLorem ipsum dolor sitsequrei dolor architecto accusamus quisquam.</p>
 				</div>
 				<div class="col">
 					<h6>How to's</h6>
